<resources>
    <string name="app_name">RentEase</string>
    <string name="quote">Rent out your property or find your perfect rental home effortlessly with RentEase app.\nQuick, easy, and convenient!</string>
    <string name="login_background">login background</string>
    <string name="login_signup">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="add">add</string>
    <string name="hint_search">Search</string>
    <string name="name">Name</string>
    <string name="search_region">Search region</string>
    <string name="filter_more">Filter more</string>
    <string name="search_city">Search city</string>
    <string name="price_range">Price range</string>
    <string name="types">Types</string>
    <string name="type_condo">ကွန်ဒို</string>
    <string name="type_apartment">တိုက်ခန်း</string>
    <string name="type_hostel">အဆောင်</string>
    <string name="type_bungalow">လုံးချင်းအိမ်</string>
    <string name="type_field">မြေကွက်/ခြံ</string>
    <string name="type_mini_condo">မီနီကွန်ဒို</string>
    <string name="quarter">Quarter</string>
    <string name="filter">Filter</string>
    <string name="search_quarter">Search quarter</string>
    <string name="msg_rating_and_interest">Rating: %1$s/5 and Interested by %2$s people</string>
    <string name="townships">Townships</string>
</resources>